Add sources to 1st assignment

--- a/assignments/01.ipynb
+++ b/assignments/01.ipynb
@@ -179,6 +179,8 @@
     }
    ],
    "source": [
+    "# Solution adapted from: https://towardsdatascience.com/named-entity-recognition-with-nltk-and-spacy-8c4a7d88e7da\n",
+    "\n",
     "displacy.render(nlp(text), jupyter=True, style=\"ent\")"
    ]
   },
@@ -297,6 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Solution adapted from https://www.nltk.org/howto/sentiment.html\n",
+    "\n",
     "sentences = [\n",
     "    \"We are happy!\",\n",
     "    \"Today I am Happy\",\n",
@@ -373,6 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Solution adapted from https://stackabuse.com/text-summarization-with-nltk-in-python/\n",
+    "\n",
     "# 1. Download the article\n",
     "with urllib.request.urlopen(\"https://en.wikipedia.org/wiki/Artificial_intelligence\") as f:\n",
     "    text = str(f.read(), \"utf-8\")"
@@ -538,7 +544,6 @@
    "source": [
     "# Solution adapted from: https://www.nltk.org/_modules/nltk/classify/textcat.html\n",
     "# Note that the model doesn't use \"probability\", but \"distance\" from a language.\n",
-    "#\n",
     "# Distance can be arbitrarily large, assume Inf. Therefore, probability makes no sense,\n",
     "# as (in floating point numbers, anyway) anything divided by Inf is zero.\n",
     "\n",
