Solve last problem in assignment 6

--- a/assignments/01.ipynb
+++ b/assignments/01.ipynb
@@ -578,7 +578,48 @@
     "\n",
     "Which problems do adaptive and predictive keyboards address?\n",
     "Explain how touch information and language information can be combined for keyboard adaptation.\n",
-    "Explain decoding of touch sequences with token passing and beam pruning. Using Algorithm"
+    "Explain decoding of touch sequences with token passing and beam pruning."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which problems do adaptive and predictive keyboards address?\n",
+    "\n",
+    "Both of these types of keyboards aim to enhance typing experience for users using all kinds of keyboards,\n",
+    "from touch-based ones on smartphones to physical full-size computer keyboards. Some of the problems\n",
+    "include typos, or slow typing speeds, and typing accuracy. Adaptive and predictive keyboards\n",
+    "use various machine learning algorithms to analyze the typing context and user keystrokes to achieve\n",
+    "its goals."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explain how touch information and language information can be combined for keyboard adaptation.\n",
+    "\n",
+    "To achieve adaptive keyboards language data (phrases and words most commonly used by users)\n",
+    "and touch information (keystrokes, swipes and other input) is combined. Adding current\n",
+    "user input to the mix allows predictive algorithms to guess the next letters, words and whole phrases\n",
+    "the user might type. Thanks to this adaptive keyboards can reduce the amount of typing required\n",
+    "or fix slight mis-inputs into the keyboard."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explain decoding of touch sequences with token passing and beam pruning.\n",
+    "\n",
+    "Those techniques are used to predict the sequence of tokens the user wanted to type\n",
+    "based on a sequence of touch inputs. Token passing works by assigning a score to each candidate\n",
+    "token and passing those scores to the next candidate tokens. Beam pruning in turn reduces\n",
+    "the size of the set of next candidate tokens, by removing candidates with low scores."
    ]
   }
  ],
