--- a/assignments/01.ipynb
+++ b/assignments/01.ipynb
@@ -48,7 +48,9 @@
     "> chairman and majority shareholder of Pixar, a member of The Walt Disney Company's\n",
     "> board of directors following its acquisition of Pixar, and the founder, chairman, and CEO of NeXT.\n",
     "> Jobs is widely recognized as a pioneer of the microcomputer\n",
-    "> revolution of the 1970s and 1980s, along with Apple co-founder Steve Wozniak."
+    "> revolution of the 1970s and 1980s, along with Apple co-founder Steve Wozniak.\n",
+    "\n",
+    "Solution adapted from: https://towardsdatascience.com/named-entity-recognition-with-nltk-and-spacy-8c4a7d88e7da"
    ]
   },
   {
@@ -57,12 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"\"\"Steve Jobs was an American entrepreneur and business magnate.\n",
-    "He was the chairman, chief executive officer (CEO), and a co-founder of Apple Inc.,\n",
-    "chairman and majority shareholder of Pixar, a member of The Walt Disney Company's\n",
-    "board of directors following its acquisition of Pixar, and the founder, chairman, and CEO of NeXT.\n",
-    "Jobs is widely recognized as a pioneer of the microcomputer\n",
-    "revolution of the 1970s and 1980s, along with Apple co-founder Steve Wozniak.\n",
+    "text = \"\"\"Steve Jobs was an American entrepreneur and business\n",
+    "magnate. He was the chairman, chief executive officer (CEO), and a\n",
+    "co-founder of Apple Inc., chairman and majority shareholder of Pixar,\n",
+    "a member of The Walt Disney Company's board of directors following\n",
+    "its acquisition of Pixar, and the founder, chairman, and CEO of NeXT.\n",
+    "Jobs is widely recognized as a pioneer of the microcomputer revolution\n",
+    "of the 1970s and 1980s, along with Apple co-founder Steve Wozniak.\n",
     "\"\"\""
    ]
   },
@@ -179,8 +182,6 @@
     }
    ],
    "source": [
-    "# Solution adapted from: https://towardsdatascience.com/named-entity-recognition-with-nltk-and-spacy-8c4a7d88e7da\n",
-    "\n",
     "displacy.render(nlp(text), jupyter=True, style=\"ent\")"
    ]
   },
@@ -290,7 +291,9 @@
     "- I am sad\n",
     "- We are sad\n",
     "- We are super sad\n",
-    "- We are all so sad today"
+    "- We are all so sad today\n",
+    "\n",
+    "Solution adapted from https://www.nltk.org/howto/sentiment.html"
    ]
   },
   {
@@ -299,8 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution adapted from https://www.nltk.org/howto/sentiment.html\n",
-    "\n",
     "sentences = [\n",
     "    \"We are happy!\",\n",
     "    \"Today I am Happy\",\n",
@@ -339,13 +340,20 @@
     "data = []\n",
     "\n",
     "for sentence in sentences:\n",
-    "    compound_score = SentimentIntensityAnalyzer().polarity_scores(sentence)[\"compound\"]\n",
-    "    \n",
+    "    compound_score = (\n",
+    "        SentimentIntensityAnalyzer()\n",
+    "        .polarity_scores(sentence)[\"compound\"]\n",
+    "    )\n",
+    "\n",
     "    sentiment = \"neutral\"\n",
     "    if compound_score >= 0.05: sentiment = \"positive\"\n",
     "    if compound_score <= -0.05: sentiment = \"negative\"\n",
     "\n",
-    "    data.append({\"Sentence\": sentence, \"Sentiment\": sentiment, \"Compound Score\": compound_score})\n",
+    "    data.append({\n",
+    "        \"Sentence\": sentence,\n",
+    "        \"Sentiment\": sentiment,\n",
+    "        \"Compound Score\": compound_score,\n",
+    "    })\n",
     "\n",
     "MarkdownTable.from_dicts(data).display()\n"
    ]
@@ -368,7 +376,9 @@
     "4. Tokenization — Creation of tokens (Word tokens and Sentence tokens)\n",
     "5. Calculate the word frequency for each word.\n",
     "6. Calculate the weighted frequency for each sentence.\n",
-    "7. Creation of summary choosing 30% of top weighted sentences."
+    "7. Creation of summary choosing 30% of top weighted sentences.\n",
+    "\n",
+    "Solution adapted from https://stackabuse.com/text-summarization-with-nltk-in-python/"
    ]
   },
   {
@@ -377,10 +387,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution adapted from https://stackabuse.com/text-summarization-with-nltk-in-python/\n",
-    "\n",
     "# 1. Download the article\n",
-    "with urllib.request.urlopen(\"https://en.wikipedia.org/wiki/Artificial_intelligence\") as f:\n",
+    "url = \"https://en.wikipedia.org/wiki/Artificial_intelligence\"\n",
+    "with urllib.request.urlopen(url) as f:\n",
     "    text = str(f.read(), \"utf-8\")"
    ]
   },
@@ -391,7 +400,11 @@
    "outputs": [],
    "source": [
     "# 2. Parse the HTML content and extract the main article\n",
-    "paragraphs = BeautifulSoup(text, \"html.parser\").find(id=\"mw-content-text\").find_all(\"p\")\n",
+    "paragraphs = (\n",
+    "    BeautifulSoup(text, \"html.parser\")\n",
+    "    .find(id=\"mw-content-text\")\n",
+    "    .find_all(\"p\")\n",
+    ")\n",
     "article = \" \".join(p.text for p in paragraphs)"
    ]
   },
@@ -429,7 +442,8 @@
     "# 5. Calculate word frequency\n",
     "stop_words = set(nltk.corpus.stopwords.words('english'))\n",
     "\n",
-    "tf = Counter(filter(lambda w: w not in stop_words, map(str.casefold, words)))"
+    "tf = Counter(filter(lambda w: w not in stop_words,\n",
+    "                    map(str.casefold, words)))"
    ]
   },
   {
@@ -498,7 +512,11 @@
    ],
    "source": [
     "# 7. Creation of summary choosing 30 of top weighted sentences.\n",
-    "summary_sentences = heapq.nlargest(30, sentence_scores.keys(), key=sentence_scores.get)\n",
+    "summary_sentences = heapq.nlargest(\n",
+    "    30,\n",
+    "    sentence_scores.keys(),\n",
+    "    key=sentence_scores.get,\n",
+    ")\n",
     "summary = \"\\n\".join(summary_sentences)\n",
     "\n",
     "IPython.display.display_pretty(summary, raw=True)"
@@ -518,7 +536,13 @@
     "1. Solen skinner i dag, fuglene synger, og det er sommer.\n",
     "2. Ní dhéanfaidh ach Dia breithiúnas orm.\n",
     "3. I domum et cuna matrem tuam in cochleare.\n",
-    "4. Huffa, huffa meg, det finns poteter på badet. Stakkars, stakkars meg, det finns poteter på badet."
+    "4. Huffa, huffa meg, det finns poteter på badet. Stakkars, stakkars meg, det finns poteter på badet.\n",
+    "\n",
+    "Solution adapted from: https://www.nltk.org/_modules/nltk/classify/textcat.html\n",
+    "\n",
+    "Note that the model doesn't use \"probability\", but \"distance\" from a language.\n",
+    "Distance can be arbitrarily large, assume Inf. Therefore, probability makes no sense,\n",
+    "as (in floating point numbers, anyway) anything divided by Inf is zero."
    ]
   },
   {
@@ -542,28 +566,31 @@
     }
    ],
    "source": [
-    "# Solution adapted from: https://www.nltk.org/_modules/nltk/classify/textcat.html\n",
-    "# Note that the model doesn't use \"probability\", but \"distance\" from a language.\n",
-    "# Distance can be arbitrarily large, assume Inf. Therefore, probability makes no sense,\n",
-    "# as (in floating point numbers, anyway) anything divided by Inf is zero.\n",
-    "\n",
     "sentences = [\n",
     "    \"Solen skinner i dag, fuglene synger, og det er sommer.\",\n",
     "    \"Ní dhéanfaidh ach Dia breithiúnas orm.\",\n",
     "    \"I domum et cuna matrem tuam in cochleare.\",\n",
-    "    \"Huffa, huffa meg, det finns poteter på badet. Stakkars, stakkars meg, det finns poteter på badet.\",\n",
+    "    (\n",
+    "        \"Huffa, huffa meg, det finns poteter på badet.\"\n",
+    "        \"Stakkars, stakkars meg, det finns poteter på badet.\"\n",
+    "    ),\n",
     "]\n",
     "\n",
     "tc = nltk.TextCat()\n",
     "data = []\n",
     "for sentence in sentences:\n",
-    "    distances = {k: float(v) for k, v in tc.lang_dists(sentence).items()}\n",
+    "    distances = {\n",
+    "        k: float(v) for k, v in tc.lang_dists(sentence).items()\n",
+    "    }\n",
     "    most_likely = heapq.nsmallest(3, distances, key=distances.get)\n",
     "    data.append({\n",
     "        \"Sentence\": sentence,\n",
-    "        \"1st most likely language (distance)\": f\"{most_likely[0]} ({distances[most_likely[0]]})\",\n",
-    "        \"2nd most likely language (distance)\": f\"{most_likely[1]} ({distances[most_likely[1]]})\",\n",
-    "        \"3rd most likely language (distance)\": f\"{most_likely[2]} ({distances[most_likely[2]]})\",\n",
+    "        \"1st most likely language (distance)\":\n",
+    "            f\"{most_likely[0]} ({distances[most_likely[0]]})\",\n",
+    "        \"2nd most likely language (distance)\":\n",
+    "            f\"{most_likely[1]} ({distances[most_likely[1]]})\",\n",
+    "        \"3rd most likely language (distance)\":\n",
+    "            f\"{most_likely[2]} ({distances[most_likely[2]]})\",\n",
     "    })\n",
     "MarkdownTable.from_dicts(data).display()"
    ]
